<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_85sdp"
            android:gravity="center"
            android:background="@drawable/oval_shape">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"

                    app:layout_constraintBottom_toTopOf="@+id/text_user"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    android:contentDescription="TODO" />

                <TextView
                    android:id="@+id/text_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_50sdp"
                    android:text="@string/user"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_12sdp"

                    android:typeface="sans"
                    app:fontFamily="sans-serif"
                    app:layout_constraintLeft_toLeftOf="@id/enter_user_name"

                    app:layout_constraintTop_toBottomOf="@+id/logo" />

                <EditText
                    android:id="@+id/enter_user_name"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edit_text_drawable"
                    android:hint="@string/user"
                    android:paddingLeft="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_user" />

                <TextView
                    android:id="@+id/text_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/password"
                    android:textSize="@dimen/_12sdp"
                    android:textStyle="bold"
                    android:textColor="@android:color/black"
                    android:typeface="sans"
                    app:fontFamily="sans-serif"
                    app:layout_constraintLeft_toLeftOf="@id/enter_user_name"


                    app:layout_constraintTop_toBottomOf="@+id/enter_user_name" />

                <EditText
                    android:id="@+id/enter_password"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edit_text_drawable"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/_5sdp"
                    android:singleLine="true"
                    android:textSize="@dimen/_12sdp"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/text_password" />

                <Button
                    android:id="@+id/btn_log_in"
                    android:layout_width="@dimen/_200sdp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="@drawable/btn_drawable"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/_15sdp"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/enter_password" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="@dimen/_20sdp"

                    android:gravity="center"
                    android:text="@string/powered_by_fps"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/_12sdp"
                    app:fontFamily="sans-serif"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"

                    app:layout_constraintBottom_toBottomOf="parent" />


            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/circle_shape">

            <ImageView
                android:id="@+id/logo1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_centerInParent="true"
                android:background="@drawable/hfcl_logo"

                android:contentDescription="TODO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </RelativeLayout>
    </FrameLayout>

    <include
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</RelativeLayout>